apt install libabsl-dev

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -164,6 +164,7 @@ jobs:
               gnupg \
               gpg \
               less \
+              libabsl-dev \
               libboost-all-dev \
               libc-ares-dev \
               libgrpc++-dev \
