--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,26 +115,34 @@ jobs:
             platform: linux_aarch64-debian-bullseye
             image: debian:bullseye
             runs_on: buildjet-8vcpu-ubuntu-2204-arm
+            os: bullseye
           - target: x86_64-debian-bullseye
             platform: linux_x86_64-debian-bullseye
             image: debian:bullseye
             runs_on: buildjet-8vcpu-ubuntu-2204
+            os: bullseye
           - target: aarch64-debian-bookworm
             platform: linux_aarch64-ubuntu-jammy
             image: debian:bookworm
             runs_on: buildjet-8vcpu-ubuntu-2204-arm
+            os: bookworm
           - target: x86_64-debian-bookworm
             platform: linux_x86_64-ubuntu-jammy
             image: debian:bookworm
             runs_on: buildjet-8vcpu-ubuntu-2204
-          - target: aarch64-ubuntu-jammy-gnu
-            platform: linux_aarch64-ubuntu-jammy
-            image: ubuntu:22.04
-            runs_on: buildjet-8vcpu-ubuntu-2204-arm
-          - target: x86_64-ubuntu-jammy-gnu
-            platform: linux_x86_64-ubuntu-jammy
-            image: ubuntu:22.04
-            runs_on: buildjet-8vcpu-ubuntu-2204
+            os: bookworm
+
+              ## CR erodkin: set aside for now so we can focus on getting debian builds working
+          #- target: aarch64-ubuntu-jammy-gnu
+            #platform: linux_aarch64-ubuntu-jammy
+            #image: ubuntu:22.04
+            #runs_on: buildjet-8vcpu-ubuntu-2204-arm
+          #- target: x86_64-ubuntu-jammy-gnu
+            #platform: linux_x86_64-ubuntu-jammy
+            #image: ubuntu:22.04
+            #runs_on: buildjet-8vcpu-ubuntu-2204
+
+              ## CR erodkin: old, probably should delete all this
           #- target: x86_64-unknown-linux-gnu
             #platform: linux_x86_64
             #image: ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main
@@ -156,6 +164,7 @@ jobs:
           DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
               build-essential \
               ca-certificates \
+              cmake \
               curl \
               doxygen \
               g++ \
@@ -181,15 +190,20 @@ jobs:
 
           # Add the public key for the llvm repository to get the correct clang version
           bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
-          apt-add-repository -y 'deb http://apt.llvm.org/focal/ llvm-toolchain-focal-15 main'
+          apt-add-repository -y 'deb http://apt.llvm.org/${{ matrix.os }}/ llvm-toolchain-${{ matrix.os }}-15 main'
+          apt-add-repository -y 'deb http://deb.debian.org/debian bullseye-backports main'
 
+
+          # CR erodkin: (used for ubuntu but maybe not debian)
           # Add public key and repository to get cmake 3.25+
-          wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
-          echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' > /etc/apt/sources.list.d/kitware.list
+          #wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
+          #echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' > /etc/apt/sources.list.d/kitware.list
 
           apt-get update
-          apt-get -y --no-install-recommends install -t llvm-toolchain-focal-15 clang-15 clang-tidy-15
+          apt-get -y --no-install-recommends install -t llvm-toolchain-${{ matrix.os }}-15 clang-15 clang-tidy-15
           apt-get -y install cmake
+
+          apt-get -y --no-install-recommends install -t bullseye-backports cmake
 
           #mkdir -p ${HOME}/opt/src
           #cd ${HOME}/opt/src && \
