--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -191,7 +191,6 @@ jobs:
           # Add the public key for the llvm repository to get the correct clang version
           bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
           apt-add-repository -y 'deb http://apt.llvm.org/${{ matrix.os }}/ llvm-toolchain-${{ matrix.os }}-15 main'
-          apt-add-repository -y 'deb http://deb.debian.org/debian bullseye-backports main'
 
 
           # CR erodkin: (used for ubuntu but maybe not debian)
@@ -202,8 +201,6 @@ jobs:
           apt-get update
           apt-get -y --no-install-recommends install -t llvm-toolchain-${{ matrix.os }}-15 clang-15 clang-tidy-15
           apt-get -y install cmake
-
-          apt-get -y --no-install-recommends install -t bullseye-backports cmake
 
           #mkdir -p ${HOME}/opt/src
           #cd ${HOME}/opt/src && \
@@ -225,6 +222,12 @@ jobs:
             #ninja install && \
             #cd .. && \
             #rm -rf build
+
+      - name: Install cmake
+        if: ${{ matrix.os }} == 'bullseye'
+        run: |
+          apt-add-repository -y 'deb http://deb.debian.org/debian bullseye-backports main'
+          apt-get -y --no-install-recommends install -t bullseye-backports cmake
 
       - name: Setup build directory
         run: mkdir builds
