--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,6 +163,8 @@ jobs:
         if: ${{ matrix.os }} == 'jammy'
         run: |
           # Add public key and repository to get cmake 3.25+
+          apt-get update
+          apt-get -y dist-upgrade
           apt-get -y --no-install-recommends install wget gpg
           wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
           echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' > /etc/apt/sources.list.d/kitware.list
