--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,11 @@
 # constrained by the version of CMake available on target systems.
 cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
+set(CMAKE_PROJECT_VERSION 0.0.1)
 
 # Identify the project.
 project(viam-cpp-sdk
-  VERSION 0.0.0
+  VERSION ${CMAKE_PROJECT_VERSION}
   DESCRIPTION "Viam Robotics C++ SDK"
   HOMEPAGE_URL https://github.com/viamrobotics/viam-cpp-sdk
   LANGUAGES CXX
