--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -241,7 +241,7 @@ jobs:
               zlib1g-dev
 
       - name: Update CMake for bullseye
-        run: Update CMake for bullseye
+        run: echo "installing CMake for bullseye"
           - if: ${{ matrix.image }} == debian:bullseye
             run: |
           apt-add-repository -y 'deb http://deb.debian.org/debian bullseye-backports main'
