--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Build + draft release
 
-on:
-  workflow_dispatch:
+# CR erodkin: delete me
+on: pull_request
+  #workflow_dispatch:
 
 # (erodkin) this is needed to create the release, per https://github.com/softprops/action-gh-release/issues/236
 permissions:
@@ -91,6 +92,10 @@ jobs:
         run: |
           cmake --install build --prefix builds/viam-cpp-sdk-${{ matrix.platform }}
 
+      - name: Create tar
+        run: |
+          tar -czvf builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz builds/viam-cpp-sdk-${{ matrix.platform }}
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -169,6 +174,10 @@ jobs:
       - name: Copy
         run: |
           /usr/bin/cmake --install build --prefix builds/viam-cpp-sdk-${{ matrix.platform }}
+
+      - name: Create tar
+        run: |
+          tar -czvf builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz builds/viam-cpp-sdk-${{ matrix.platform }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -265,6 +274,10 @@ jobs:
         run: |
           /usr/bin/cmake --install build --prefix builds/viam-cpp-sdk-${{ matrix.platform }}
 
+      - name: Create tar
+        run: |
+          tar -czvf builds/viam-cpp-sdk-${{ matrix.platform }}.tar.gz builds/viam-cpp-sdk-${{ matrix.platform }}
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -283,7 +296,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: releases/v${{ needs.prepare.outputs.version }}
-          files: builds/*
+          files: builds/*.tar.gz
           draft: true
           prerelease: false
           fail_on_unmatched_files: true
