add exception classes

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -37,6 +37,7 @@ endif()
 target_sources(viamsdk
   PRIVATE
     common/client_helper.cpp
+    common/exception.cpp
     common/linear_algebra.cpp
     common/pose.cpp
     common/proto_type.cpp
@@ -109,6 +110,7 @@ target_sources(viamsdk
       ../..
     FILES
       ../../viam/sdk/common/client_helper.hpp
+      ../../viam/sdk/common/exception.hpp
       ../../viam/sdk/common/linear_algebra.hpp
       ../../viam/sdk/common/pose.hpp
       ../../viam/sdk/common/proto_type.hpp
