reconfigurable base class

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -82,6 +82,7 @@ target_sources(viamsdk
     module/signal_manager.cpp
     referenceframe/frame.cpp
     registry/registry.cpp
+    resource/reconfigurable.cpp
     resource/resource.cpp
     resource/resource_api.cpp
     resource/resource_manager.cpp
@@ -155,6 +156,7 @@ target_sources(viamsdk
       ../../viam/sdk/module/signal_manager.hpp
       ../../viam/sdk/referenceframe/frame.hpp
       ../../viam/sdk/registry/registry.hpp
+      ../../viam/sdk/resource/reconfigurable.hpp
       ../../viam/sdk/resource/resource.hpp
       ../../viam/sdk/resource/resource_api.hpp
       ../../viam/sdk/resource/resource_manager.hpp
