--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -100,7 +100,7 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
   # TODO: Should we have an option to always do local generation so
   # offline development always works?
   #
-  if ((NOT VIAMCPPSDK_OFFLINE_PROTO_GENERATION) AND (VIAMCPPSDK_GRPCXX_VERSION VERSION_GREATER 1.51.1))
+  if ((NOT VIAMCPPSDK_OFFLINE_PROTO_GENERATION) AND VIAMCPPSDK_BUF_REMOTE_PLUGIN_SUPPORTED)
     configure_file(
       config/buf.gen.remote.plugin.yaml.in
       buf.gen.yaml
