--- a/src/viam/examples/modules/complex/config/buf.gen.remote.plugin.yaml.in
+++ b/src/viam/examples/modules/complex/config/buf.gen.remote.plugin.yaml.in
@@ -18,5 +18,5 @@ managed:
 plugins:
   - plugin: buf.build/grpc/cpp:v@VIAMCPPSDK_GRPCXX_VERSION@
     out: gen
-  - plugin: buf.build/protocolbuffers/cpp
+  - plugin: buf.build/protocolbuffers/cpp:v@VIAMCPPSDK_PROTOBUF_VERSION_MAJOR@.@VIAMCPPSDK_PROTOBUF_VERSION_MINOR@
     out: gen
