--- a/src/viam/api/config/buf.gen.remote.plugin.yaml.in
+++ b/src/viam/api/config/buf.gen.remote.plugin.yaml.in
@@ -12,13 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# buf.gen.yaml
 version: v1
 managed:
   enabled: true
 plugins:
   - plugin: buf.build/grpc/cpp:v@VIAMCPPSDK_GRPCXX_VERSION@
     out: gen/viam/api
-  # dependencies
-  - plugin: buf.build/protocolbuffers/cpp
+  - plugin: buf.build/protocolbuffers/cpp:v@VIAMCPPSDK_PROTOBUF_VERSION_MAJOR@.@VIAMCPPSDK_PROTOBUF_VERSION_MINOR@
     out: gen/viam/api
