--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -5,12 +5,12 @@ on: pull_request
 jobs:
   cpp-linter:
     if: github.repository_owner == 'viamrobotics'
-    runs-on: [self-hosted, x64]
+    runs-on: ubuntu-latest
     container:
       image: ghcr.io/viamrobotics/canon:amd64
     steps:
-      - name: Checkout PR/Push/Workflow Dispatch
-        uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - name: install clang-format
