--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           steps.is_organization_member.outputs.result == 'false'
 
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Which Version
         id: which_version
@@ -52,7 +52,7 @@ jobs:
   build_macos:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
-    runs-on: [self-hosted, ARM64, macOS]
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
@@ -63,7 +63,7 @@ jobs:
             platform: macosx_x86_64
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ needs.prepare.outputs.sha }}
 
@@ -122,7 +122,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ needs.prepare.outputs.sha }}
 
@@ -214,7 +214,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ needs.prepare.outputs.sha }}
 
